--- a/css/style.css
+++ b/css/style.css
@@ -55,17 +55,21 @@ footer{
 
 @-webkit-keyframes logo_wiggle{
   /*Your code here.*/
+  from {width: 25px;}
+  to{width:420px;}
 
 }
 
 @keyframes logo_wiggle{
   /*Your code here.*/
-
+  from {width: 25px;}
+  to{width:420px;}
 } 
 
 #logo{
    /*Your code here.*/
- 
+  animation-name: logo_wiggle;
+  animation-duration: 15s;
 }
 
 /* Cards! */
@@ -73,7 +77,10 @@ footer{
     min-height: 500px;
     /*Your code here.*/
     /*Don't forget to vertically and horizontally alight the card*/
-  
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: row wrap;
 }
 
 .card {
@@ -83,7 +90,7 @@ footer{
   padding: 0 0 50px 0;
   /*Your code here.*/
   /*Take a look at flex-basis*/
-
+  flex-basis: 400px;
 }
 
 .card > header{
@@ -129,6 +136,10 @@ footer{
 .gallery{
   min-height: 600px;
   /*Your code here again.*/
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  align-content: center;
 }
 
 .gallery > img{
@@ -142,10 +153,18 @@ header{
   background: #fff;
   border-bottom: 3px solid #50C7C7;
   /*Your  code here again.*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .nav_links{
   /*Your code here again.*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .nav_item a{
@@ -165,6 +184,7 @@ header{
   /* Cards! */
   .card {
     /*Your  code here again.*/
+    flex-basis: 225px;
   }
 
   .card_big{
@@ -175,10 +195,13 @@ header{
   /* Navbar */
   header{
     /*Your code here again.*/  
+    flex-flow: row nowrap;
+    justify-content: space-between;
   }
 
   .nav_links{
     /*Your code here again.*/  
+    flex-flow: row nowrap;
   }
 
   .nav_item a{
@@ -191,8 +214,32 @@ header{
     flex-basis: 200px;
   }
   /*Your code here again.*/
-  /*You will want four selectors*/  
+  /*You will want four selectors*/ 
+  body{
+    background-image: none;
+  }
+  .pricing{
+    align-items: flex-start;
+    flex-flow: row wrap;
+  } 
+
+  .gallery{
+    display: none;
+  }
+
+  #gallery{
+    display: none;
+  }
+
+  #logo{
+    width: 420px;
+  }
 }
 
 /*Your code here again.*/ 
 /*Add media query to handle reduced-motion*/
+@media screen and (prefers-reduced-motion:reduce){
+  #logo{
+    animation: logo_wiggle 0s;
+  }
+}
