--- a/css/style.css
+++ b/css/style.css
@@ -293,6 +293,6 @@ header{
 @media screen and (prefers-reduced-motion:reduce){
   #logo{
     -webkit-animation: logo_wiggle 0s;
-            animation: logo_wiggle 0s;;
+            animation: logo_wiggle 0s;
   }
 }
